components/Card/Card.module.css
.wrapper {
  margin: 3rem 0;
  border: 1px solid lightgray;
}

@media (max-width: 800px) {
  .wrapper {
    border: none;
  }
}

.header,
.footer {
  padding: 1rem;
}

.header {
  display: flex;
  align-items: center;
}

.header img {
  width: 100%;
  max-width: 2.5rem;
  margin-right: 0.7rem;
  border: 1px solid lightgray;
  border-radius: 100%;
}

.flex_nowrap_aligncenter {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
}

.caption {
  margin-top: 0.6rem;
  color: gray;
  line-height: 1.6;
}

.comments_wrapper {
  margin-top: 1rem;
}

.comment_box {
  display: flex;
  margin: 1rem 0;
}

.comment_box input,
.comment_box button {
  padding: 0.5rem 0;
  font: inherit;
  border: none;
  outline: none;
}

.comment_box button {
  padding: 0.5rem;
  color: #141414;
  background: #e3e3e3;
  border: 1px solid gray;
  border-radius: 0.4rem;
}

.render_comment {
  display: flex;
  flex-wrap: nowrap;
  margin-top: 2rem;
}

.render_comment img {
  max-width: 2rem;
  max-height: 2rem;
  margin-right: 0.5rem;
  border-radius: 50%;
}

.render_comment small {
  color: gray;
}

.render_comment strong {
  padding-right: 0.4rem;
}

